[gd_scene load_steps=29 format=3 uid="uid://fq7onk81if74"]

[ext_resource type="Script" path="res://enemies/enemy_2_tutorial.gd" id="1_pavoc"]
[ext_resource type="Texture2D" uid="uid://cqqbap4nxnyp2" path="res://sprites/light.png" id="2_an6or"]
[ext_resource type="Shader" uid="uid://0dm11c6qayeu" path="res://shaders/hit.tres" id="4_86c2s"]
[ext_resource type="Texture2D" uid="uid://78blqfl1tysu" path="res://sprites/enemies/blue/blue_attack0000.png" id="4_yayfs"]
[ext_resource type="Texture2D" uid="uid://b6t7f75oq8a1h" path="res://sprites/enemies/blue/blue_attack0001.png" id="5_fuw0f"]
[ext_resource type="Texture2D" uid="uid://djqox1wxxv4is" path="res://sprites/enemies/blue/blue_dies1.png" id="5_sakyh"]
[ext_resource type="Texture2D" uid="uid://3rh7ih602ye0" path="res://sprites/enemies/blue/blue_attack0002.png" id="6_03iyo"]
[ext_resource type="Texture2D" uid="uid://b8vimc462kwn0" path="res://sprites/enemies/blue/blue_dies2.png" id="6_mm0f7"]
[ext_resource type="Texture2D" uid="uid://cjmfaqln51fgf" path="res://sprites/enemies/blue/blue_dies3.png" id="7_gddrn"]
[ext_resource type="Texture2D" uid="uid://bkarfyx5cr6tp" path="res://sprites/enemies/blue/blue_attack0003.png" id="7_nyfem"]
[ext_resource type="Texture2D" uid="uid://bpj1ya2m2x2kp" path="res://sprites/enemies/blue/blue_dies4.png" id="8_x0b8u"]
[ext_resource type="Texture2D" uid="uid://c13w6hjrukn4r" path="res://sprites/enemies/blue/blue_dies5.png" id="9_1d07f"]
[ext_resource type="Texture2D" uid="uid://blgjy162l4syc" path="res://sprites/enemies/blue/blue_dies6.png" id="10_qjwyo"]
[ext_resource type="Texture2D" uid="uid://8pgjd2ey4fdi" path="res://sprites/enemies/blue/blue1.png" id="11_i7e3d"]
[ext_resource type="Texture2D" uid="uid://di3xcqpdhiype" path="res://sprites/enemies/blue/blue2.png" id="12_cto3b"]
[ext_resource type="Texture2D" uid="uid://nly24koddji4" path="res://sprites/enemies/blue/blue3.png" id="13_ug7ly"]
[ext_resource type="Texture2D" uid="uid://s3jyk22y2cm4" path="res://sprites/b_particle.png" id="14_sq1t0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j3f1x"]
resource_local_to_scene = true
shader = ExtResource("4_86c2s")
shader_parameter/isHit = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_r536f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_yayfs")
}, {
"duration": 1.0,
"texture": ExtResource("5_fuw0f")
}, {
"duration": 1.0,
"texture": ExtResource("6_03iyo")
}, {
"duration": 1.0,
"texture": ExtResource("7_nyfem")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_sakyh")
}, {
"duration": 1.0,
"texture": ExtResource("6_mm0f7")
}, {
"duration": 1.0,
"texture": ExtResource("7_gddrn")
}, {
"duration": 1.0,
"texture": ExtResource("8_x0b8u")
}, {
"duration": 1.0,
"texture": ExtResource("9_1d07f")
}, {
"duration": 1.0,
"texture": ExtResource("10_qjwyo")
}],
"loop": false,
"name": &"dies",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_i7e3d")
}, {
"duration": 1.0,
"texture": ExtResource("12_cto3b")
}, {
"duration": 1.0,
"texture": ExtResource("13_ug7ly")
}],
"loop": true,
"name": &"moving",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_lueaj"]
length = 0.0115
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/isHit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4443o"]
resource_name = "hit_flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/isHit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 0.217638),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tdvf1"]
_data = {
"RESET": SubResource("Animation_lueaj"),
"hit_flash": SubResource("Animation_4443o")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_27fh4"]
radius = 67.42

[sub_resource type="Curve" id="Curve_337lr"]
_data = [Vector2(0, 0.736264), 0.0, 0.0, 0, 0, Vector2(0.0539419, 0.912088), 0.0, 0.0, 0, 0, Vector2(0.195021, 0.912088), 0.0, 0.0, 0, 0, Vector2(0.975104, 0.406593), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Animation" id="Animation_l3u02"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1241, 335)]
}

[sub_resource type="Animation" id="Animation_5if2l"]
resource_name = "scripted_enemy"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 2.86667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1241, 335), Vector2(775, 426)]
}

[sub_resource type="Animation" id="Animation_cto74"]
resource_name = "scripted_enemy2"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 2.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(368, -77.0001), Vector2(514, 248)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c8752"]
_data = {
"RESET": SubResource("Animation_l3u02"),
"scripted_enemy": SubResource("Animation_5if2l"),
"scripted_enemy2": SubResource("Animation_cto74")
}

[node name="enemy1" type="CharacterBody2D" groups=["enemy"]]
editor_description = "enemy that goes to NPC"
position = Vector2(1241, 335)
scale = Vector2(0.46, 0.46)
collision_layer = 4
collision_mask = 3
collision_priority = 2.0
script = ExtResource("1_pavoc")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.730192, 0.695854, 0.992129, 1)
energy = 0.2
texture = ExtResource("2_an6or")
texture_scale = 0.67

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_j3f1x")
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_r536f")
animation = &"attack"

[node name="HitFlash" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_tdvf1")
}

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_27fh4")

[node name="CollisionShape2D_disabled" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_27fh4")
disabled = true

[node name="isHitAnimation" type="Timer" parent="."]
wait_time = 0.7

[node name="splash" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 1.2
one_shot = true
speed_scale = 2.47
explosiveness = 0.86
randomness = 0.16
texture = ExtResource("14_sq1t0")
spread = 176.55
gravity = Vector2(0, 0)
initial_velocity_min = 71.52
initial_velocity_max = 102.3
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_337lr")

[node name="scripted_enemy" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c8752")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
